[package]
name = "toretsu"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
names = { version = "0.14.0", default-features = false }
uuid = { version = "1.4.1", features = ["v4","fast-rng"] }
redis = { version = "0.23.3", features = ["json"] }
serde_json = "1.0.107"
confique = "0.2.4"
serde = "1.0.189"
dotenv = "0.15.0"
rayon = "1.8"

[dev-dependencies]
rand = "0.8.4"
