[package]
name = "toretsu"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["json"], optional = true }
uuid = { version = "1.4.1", features = ["v4","fast-rng"] }
names = { version = "0.14.0", default-features = false }
serde_json = { version = "1.0.107", optional = true }
confique = { version = "0.2.4", optional = true }
serde = { version = "1.0.189", optional = true }
axum = { version = "0.7.4", optional = true }
dotenv = "0.15.0"
rayon = "1.8"

[dev-dependencies]
rand = "0.8.4"

[features]
api = ["dep:axum"]
backup = ["client"]
pubsub = ["client"]
client = ["dep:redis"]
default = ["backup", "config", "pubsub"]
config = ["dep:confique", "dep:serde", "dep:serde_json"]
